AC_PREREQ([2.69])
AC_INIT([ACL Repair], [0.5], [pen@lysator.liu.se], [aclrepair], [https://github.com/ptrrkssn/aclrepair])

AC_CONFIG_SRCDIR([main.c])
AC_CONFIG_HEADERS([config.h])

AC_CONFIG_AUX_DIR([build-aux])

AC_PROG_CC
AC_PROG_LN_S
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_CHECK_HEADERS([fts.h])

AC_TYPE_UID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T

AC_OUTPUT
